--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.0"
+    "hardhat": "^2.10.0",
+    "hardhat-contract-sizer": "^2.6.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.0"
