--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "hardhat": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1"
   },
