--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@openzeppelin/test-helpers": "^0.5.15",
     "dotenv": "^16.0.1",
+    "erc721a": "^4.2.0",
     "hardhat": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1"
   },
