--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "erc721a": "^4.2.0",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.0",
-    "hardhat-contract-sizer": "^2.6.1"
+    "hardhat-contract-sizer": "^2.6.1",
+    "solidity-docgen": "^0.5.16",
+    "solc-0.8": "npm:solc@^0.8.15"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.0"
+    "@openzeppelin/contracts": "^4.7.0",    
+    "yarn": "^1.22.19"
   }
 }
