--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@openzeppelin/contracts-upgradeable": "^4.7.2",
-    "@openzeppelin/hardhat-upgrades": "^1.19.1",
+    "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "@openzeppelin/test-helpers": "^0.5.15",
     "dotenv": "^16.0.1",
     "erc721a": "^4.2.0",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
-    "solidity-docgen": "^0.5.16",
-    "solc-0.8": "npm:solc@^0.8.15"
+    "solc-0.8": "npm:solc@^0.8.15",
+    "solidity-docgen": "^0.5.16"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.0",    
+    "@openzeppelin/contracts": "^4.7.0",
     "yarn": "^1.22.19"
   }
 }
