--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "name": "hardhat-project",
+  "name": "playestates-marketplace-v1",
+  "scripts": {
+    "clean": "npx hardhat clean",
+    "test": "npx hardhat test",
+    "coverage": "npx hardhat coverage",
+    "compile": "npx hardhat compile",
+    "docgen": "yarn solidity-docgen --solc-module solc-0.8 -t ./templates -o ./docs/en"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
