--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@openzeppelin/test-helpers": "^0.5.15",
     "dotenv": "^16.0.1",
     "erc721a": "^4.2.0",
+    "erc721psi": "^0.6.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
