--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.22.0",
     "ethers": "^5.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "moralis": "^2.4.0",
     "next": "^12.2.6-canary.1",
     "next-images": "^1.8.4",
     "node-sass": "^7.0.1",
