final version for audit
- added few scripts and tests
- updated documents

--- a/package.json
+++ b/package.json
@@ -13,17 +13,29 @@
     "@openzeppelin/contracts-upgradeable": "^4.7.2",
     "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "@openzeppelin/test-helpers": "^0.5.15",
+    "@typechain/hardhat": "^6.1.2",
     "dotenv": "^16.0.1",
     "erc721a": "^4.2.0",
     "erc721psi": "^0.6.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "solc-0.8": "npm:solc@^0.8.15",
-    "solidity-docgen": "^0.5.16"
+    "solidity-coverage": "^0.7.21",
+    "solidity-docgen": "^0.5.16",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.7.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "hardhat-deploy": "^0.11.12",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "yarn": "^1.22.19"
