fixed issues, wrote documentation for hacken audit

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-ETHERSCAN_API_KEY=
+ETHERSCAN_API_KEY=https://api.nft.fluuu.id/prod
 ETHERMAIN_URL=
-RINKEBY_URL=
-GOERLI_URL=
+RINKEBY_URL=https://rinkeby.infura.io/v3/5c948ab130cc463a9f712ecde3e65d49
+GOERLI_URL=https://goerli.infura.io/v3/5c948ab130cc463a9f712ecde3e65d49
 PRIVATE_KEY=
 KEY_MNEMONIC=
-REPORT_GAS=
-COINMARKETCAP_API_KEY=
+REPORT_GAS=true
+COINMARKETCAP_API_KEY=6f7bb49d-276b-46ef-bd28-5d89897e20d1
