final version for hacken's smart contract audit

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@typechain/hardhat": "^6.1.2",
     "dotenv": "^16.0.1",
     "erc721a": "^4.2.0",
-    "erc721psi": "^0.6.1",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solc-0.8": "npm:solc@^0.8.15",
+    "solidity-bits": "^0.4.0",
     "solidity-coverage": "^0.7.21",
     "solidity-docgen": "^0.5.16",
     "ts-node": "^10.9.1",
