--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-ETHERSCAN_API_KEY=https://api.nft.fluuu.id/prod
-ETHERMAIN_URL=
-RINKEBY_URL=https://rinkeby.infura.io/v3/5c948ab130cc463a9f712ecde3e65d49
-GOERLI_URL=https://goerli.infura.io/v3/5c948ab130cc463a9f712ecde3e65d49
+ETHERSCAN_API_KEY=
+ETH_MAINNET_URL=
+RINKEBY_URL=
+GOERLI_URL=
+POLYGON_MAINNET_URL=
+POLYGON_MUMBAI_URL=
 PRIVATE_KEY=
 KEY_MNEMONIC=
 REPORT_GAS=true
-COINMARKETCAP_API_KEY=6f7bb49d-276b-46ef-bd28-5d89897e20d1
+COINMARKETCAP_API_KEY=
