--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "erc721a": "^4.2.0",
     "ethers": "^5.6.9",
     "hardhat": "^2.10.0",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solc-0.8": "npm:solc@^0.8.15",
