--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.5.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
